--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,16 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark navbar-bottom-margin">
   <a class="navbar-brand" href="#">CPP Estimator</a>
+  <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+      <li class="nav-item active">
+        <a class="nav-link" href="/blog">Blog <span class="sr-only">(current)</span></a>
+      </li>
+    </ul>
   </nav>
   <div class="container">
   <app-root></app-root>
